fixed some styles of card on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -71,7 +71,7 @@ section {
 .card-team {
   flex-direction: initial;
   box-shadow: 3px 2px 10px 3px rgba(0, 0, 0, 0.1);
-
+  min-height: 380px;
   &-description {
     margin-left: 10px;
 
@@ -211,11 +211,11 @@ section {
   .card-large {
     min-height: 600px;
   }
+}
 
+@media screen and (min-width: 992px) {
   .card-team {
-    flex-direction: initial;
-    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.1);
-
+    min-height: 300px;
     img {
       position: absolute;
       left: -50px;
@@ -226,6 +226,12 @@ section {
     &-description {
       margin-left: 90px;
     }
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .card-team {
+    min-height: initial;
   }
 }
 
